<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/typeLine"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/out_come"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/outcome"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/in_come"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/income"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#5EFFF9C4"
            app:cardPreventCornerOverlap="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardUseCompatPadding="true"
        >

            <RelativeLayout
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/yuan"
                        android:hint="        "
                        android:inputType="numberDecimal"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/yuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/input_money"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/yuan"
                        android:textSize="20sp" />

                </RelativeLayout>


                <EditText
                    android:id="@+id/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/note"
                    android:textSize="15sp" />


                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <TextView
                        android:id="@+id/record_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:text="2021-10-26 09:22" />

                    <ImageView
                        android:id="@+id/time_edit"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@+id/record_time"
                        android:background="@drawable/ic_baseline_edit_24" />
                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>







        <GridView
            android:id="@+id/GridList_outcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="4"
            android:layout_marginTop="10dp"
            ></GridView>
        <GridView
            android:id="@+id/GridList_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="4"
            android:layout_marginTop="10dp"
            ></GridView>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="cancel_finish"
            android:text="@string/finish"
            android:textColor="@color/white" />

    </LinearLayout>


</FrameLayout>