<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingHorizontal="10dp">

                    <ImageView
                        android:id="@+id/user_photo_img"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/continuous_card"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_toRightOf="@+id/user_photo_img"
                        android:text="User_143275583"
                        android:textSize="20dp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/continuous_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_photo_img"
                        android:layout_marginTop="10dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="5dp"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">


                                <TextView
                                    android:id="@+id/continuous_day_title"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBaseline="@+id/input_revenue_goal"
                                    android:layout_alignParentLeft="true"
                                    android:layout_gravity="center"

                                    android:text="@string/continuous_day_s"
                                    android:textSize="15dp" />

                                <TextView
                                    android:id="@+id/continuous_day"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBaseline="@+id/input_revenue_goal"
                                    android:layout_alignParentLeft="true"
                                    android:layout_gravity="center"
                                    android:text="10"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">


                                <TextView
                                    android:id="@+id/last_billing_title"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBaseline="@+id/input_revenue_goal"
                                    android:layout_alignParentLeft="true"
                                    android:layout_gravity="center"
                                    android:text="@string/last_billing_s"
                                    android:textSize="15dp" />

                                <TextView
                                    android:id="@+id/last_billing_date"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBaseline="@+id/input_revenue_goal"
                                    android:layout_alignParentLeft="true"
                                    android:layout_gravity="center"
                                    android:text="10"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"

                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp">


                    <TextView
                        android:id="@+id/goal_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"

                        android:layout_marginRight="5dp"
                        android:text="@string/goal_title_s"
                        android:textSize="18dp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:orientation="horizontal"
                            android:paddingVertical="5dp">

                            <TextView
                                android:id="@+id/revenue_goal_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/input_revenue_goal"
                                android:layout_alignParentLeft="true"
                                android:layout_gravity="left"
                                android:text="@string/revenue_goal_s"
                                android:textSize="15dp" />


                            <EditText
                                android:id="@+id/input_revenue_goal"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/edit_background"
                                android:gravity="center"
                                android:hint="1000"
                                android:imeOptions="actionDone"

                                android:inputType="number"
                                android:numeric="integer"
                                android:padding="4dp"
                                android:singleLine="true"
                                android:textSize="15dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.51"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintVertical_bias="0.079" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="5dp">

                            <TextView
                                android:id="@+id/spending_limit_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/input_spending_limit"
                                android:layout_alignParentLeft="true"
                                android:layout_gravity="left"
                                android:text="@string/spending_limit_s"
                                android:textSize="15dp" />


                            <EditText
                                android:id="@+id/input_spending_limit"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/edit_background"
                                android:gravity="center"
                                android:hint="1000"
                                android:imeOptions="actionDone"
                                android:inputType="number"
                                android:padding="4dp"
                                android:singleLine="true"
                                android:textSize="15dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.51"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintVertical_bias="0.079" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="5dp">

                            <TextView
                                android:id="@+id/saving_goal_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/input_saving_goal"
                                android:layout_alignParentLeft="true"
                                android:layout_gravity="left"
                                android:text="@string/saving_goal_s"
                                android:textSize="15dp" />


                            <EditText
                                android:id="@+id/input_saving_goal"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/edit_background"
                                android:gravity="center"
                                android:hint="1000"
                                android:imeOptions="actionDone"
                                android:inputType="number"
                                android:padding="4dp"
                                android:singleLine="true"
                                android:textSize="15dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.51"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintVertical_bias="0.079" />
                        </RelativeLayout>

                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/round"
                    android:dividerPadding="5dp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:showDividers="middle">

                    <Button
                        android:id="@+id/badges_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:paddingRight="16dp"
                        android:text="My Medal" />

                    <Button
                        android:id="@+id/graph_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="16dp"
                        android:text="My Chart" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>